add notice getUser
